; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/mmgr/extr_aset.c_AllocSetGetChunkSpace.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/mmgr/extr_aset.c_AllocSetGetChunkSpace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@ALLOCCHUNK_PRIVATE_LEN = common dso_local global i32 0, align 4
@ALLOC_CHUNKHDRSZ = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i8*)* @AllocSetGetChunkSpace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @AllocSetGetChunkSpace(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call %struct.TYPE_5__* @AllocPointerGetChunk(i8* %7)
  store %struct.TYPE_5__* %8, %struct.TYPE_5__** %5, align 8
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %10 = load i32, i32* @ALLOCCHUNK_PRIVATE_LEN, align 4
  %11 = call i32 @VALGRIND_MAKE_MEM_DEFINED(%struct.TYPE_5__* %9, i32 %10)
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @ALLOC_CHUNKHDRSZ, align 8
  %16 = add nsw i64 %14, %15
  store i64 %16, i64* %6, align 8
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %18 = load i32, i32* @ALLOCCHUNK_PRIVATE_LEN, align 4
  %19 = call i32 @VALGRIND_MAKE_MEM_NOACCESS(%struct.TYPE_5__* %17, i32 %18)
  %20 = load i64, i64* %6, align 8
  ret i64 %20
}

declare dso_local %struct.TYPE_5__* @AllocPointerGetChunk(i8*) #1

declare dso_local i32 @VALGRIND_MAKE_MEM_DEFINED(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @VALGRIND_MAKE_MEM_NOACCESS(%struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
